--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -11,11 +11,12 @@ free to contact me at florin @ libertv.ro and tell me what's not wrong, I will c
 
 How to build LiberTV Player
 
-Prerequisites
+*1. Prerequisites*
 Microsoft Visual Studio 2005. 
+
 The Express edition should compile, but I haven't tried that. 
 
-2. Configure Visual Studio and SDKs:
+*2. Configure Visual Studio and SDKs:*
 
 LiberTV requires the following SDKs:
 Boost 1.33 (for Libtorrent)
@@ -45,10 +46,12 @@ Boost lib (eg. C:\SDK\boost\lib)
 (no lib files required for Windows Media Player 10 SDK)
 
 
-3. Get the latest source code from SVN
+*3. Get the latest source code from SVN*
 
 3.1 Choose a folder where you want to get the LiberTV source into, let's say it's C:\Code\LiberTV
+
 3.2 Install LiberTV (from www.libertv.ro)
+
 This is required, because LiberTV uses VLC and some other 3rd party DLLs, which are not included in the source tree. Also, some important registry keys (with paths) are set up during the setup process.
 You must install LiberTV into your source root's bin directory (if it's already installed, uninstall it and install to the new directory).
 For example, if you checked out the source in C:\Code\LiberTV, then LiberTV must be installed in C:\Code\LiberTV\bin
@@ -56,23 +59,23 @@ For example, if you checked out the source in C:\Code\LiberTV, then LiberTV must
 The repository URL:
 http://libertv.googlecode.com/svn/trunk/
 
+
 ..and click OK to check out the latest LiberTV sources.
 
 If you prefer the command-line svn client, in a cmd window, go to C:\Code\LiberTV and paste this:
 svn checkout http://libertv.googlecode.com/svn/trunk/ .
 
+
 This will check out the sources to current folder.
 
-The project contains several directories:
-***
-bin 			binary output directory. It also contains the 'data' folder with all the html and images.
-common 		shared headers. contains the 'lib' folder where all library files are placed
-LiberTV 		LiberTV Player project
-libtorrent.svn	Libtorrent
-LTVUtil.dll		DLL with helper functions
 
-5. Build LiberTV Player
+*5. Build LiberTV Player*
+
 Open the solution LiberTV\LiberTV2005.sln and hit F7 to build it. If everything is set up correctly, you should get /bin/libertv.exe, /bin/LTVUtil.dll.
 
-6. Hooraaaay ! You've made it !
+
+*6. Hooraaaay ! You've made it !*
+
 You can now go ahead and run the app, by hitting F5.
+
+
